--- a/capstone/capstone/Base.lproj/Main.storyboard
+++ b/capstone/capstone/Base.lproj/Main.storyboard
@@ -550,7 +550,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMx-tJ-cpU">
-                                <rect key="frame" x="144" y="445" width="127" height="42"/>
+                                <rect key="frame" x="144" y="452" width="127" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -569,8 +569,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newspaper" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UPm-Bg-06Z">
-                                <rect key="frame" x="132" y="224" width="150" height="125"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="newspaper" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UPm-Bg-06Z">
+                                <rect key="frame" x="72" y="181" width="270" height="263"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Cx4-HQ-Hhs"/>
                                     <constraint firstAttribute="height" constant="125" id="RM9-Dk-3z5"/>
